--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-asgiref==3.7.1
-coverage==7.2.6
-Django==3.2.19
-gunicorn==20.1.0
-psycopg2-binary==2.9.6
-pytz==2023.3
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+dj-database-url==2.0.0
+Django==4.2.1
 sqlparse==0.4.4
