--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+coverage==5.0.4
 dj-database-url==2.0.0
 Django==4.2.1
+gunicorn==20.0.4
+psycopg2-binary==2.8.4
+pytz==2019.3
 sqlparse==0.4.4
